ghc/tests/reader/should_fail/read009.stderr
This current error message is rather unhelpful:

	read009.hs:12: parse error on input `'
